# weatherterminal

./: .gitignore  CMakeLists.txt  LICENSE  README.md  weather.cpp
.github/workflows/: build.yml  linter.yml
